fix alignment of hamburger to be inline with site name

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ address {
 }
 
 .navbar-light .navbar-toggler {
-	top: 25%;
+	left:0;
 	position: relative;
 	margin: 10px;
 }
